adjusting margins to fix malaligned dates. Incorporated margins as an external div to wrap each Editable component where required, rather than at the top level w/in Editable component.

--- a/src/components/Editable/Editable.module.css
+++ b/src/components/Editable/Editable.module.css
@@ -4,7 +4,6 @@
   color: #333333;
   cursor: pointer;
   font-size: 16px;
-  padding: 0 15px;
 }
 
 .editDiv {
