--- a/src/components/Job/Job.module.css
+++ b/src/components/Job/Job.module.css
@@ -243,6 +243,10 @@
   border-bottom: 2px solid #333333;
 }
 
+.marginWrap {
+  margin: 0 10px;
+}
+
 .addTagInput {
   cursor: text;
   min-width: 50px;
